<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia! Sergei Khriapov!</string>
    <string name="menu_description">Menu_description</string>
    <string name="build_description">Build_description</string>
    <string name="share_description">Share_description</string>
    <string name="heart_description">Heart_description</string>
    <string name="avatar_description">Avatar_description</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content post can\'t be empty</string>
    <string name="description_post_save">New post</string>
    <string name="edit_message">Edit message</string>
    <string name="chooser_share_post">chooser_share_post</string>
    <string name="save">Save</string>
    <string name="exitedit">ExitEdit</string>
    <string name="edit">Edit</string>
    <string name="new_post">New post:</string>
    <string name="back">Back</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_posted_new_post">%1$s published a new post:\n%2$s\'s</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="empty">Empty</string>
    <string name="retry">Retry</string>
    <string name="error_text">loading_error</string>
    <string name="error_synchronization">Synchronization error</string>
    <string name="attachmentContainer">attachmentContainer</string>
    <string name="videoPreviewImage">videoPreviewImage</string>
    <string name="add_post">addNewPost</string>
    <string name="sync_description">Synchronization</string>
    <string name="error_local_like">error_local_like</string>
    <string name="extended_fab_content_desc">make hidden visible</string>
    <string name="extended_fab_label">Свежие записи</string>
    <string name="new_post_button">New Post</string>
    <string name="take_photo">Take photo</string>
    <string name="pick_photo">Pick photo</string>
    <string name="remove_photo">remove_photo</string>
    <string name="preview_photo">preview photo</string>
    <string name="photo_pick_error">Photo pick error</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">logout</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="sign_in_account">Sign In</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
</resources>