<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buildBarrier"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_height_of_one_text_line"
        android:layout_marginTop="@dimen/common_spacing"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/buildBarrier"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="@dimen/common_height_of_one_text_line"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.App.MenuButton"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/menu_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buildBarrier"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:tint="?colorControlNormal" />

    <ImageView
        android:id="@+id/build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/build_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_build_17"
        app:tint="?colorControlNormal" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:gravity="fill_horizontal"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buildBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="build" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/contentBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.App.LikedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/heart_description"
        android:padding="16dp"
        app:icon="@drawable/like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:tint="?colorControlNormal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.App.LikedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/share_description"
        android:padding="16dp"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:icon="@drawable/ic_baseline_share_24"
        app:tint="?colorControlNormal"
        android:textColor="?colorControlNormal"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/Widget.App.LikedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share_description"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
        app:icon="@drawable/ic_baseline_visibility_24"
        app:tint="?colorControlNormal"
        android:textColor="?colorControlNormal"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/iconBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="like, share, views" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iconBarrier" />


</androidx.constraintlayout.widget.ConstraintLayout>