<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewPostActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/editIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/baseline_edit_24" />

        <TextView
            android:id="@+id/editingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/editIcon"
            android:text="@string/edit"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/originalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editingText"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/originalText"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_light" />

        <EditText
            android:id="@+id/editPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/originalText"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="16sp" />
    </RelativeLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.Material3.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/purple_500"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/exitEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/exitedit"
                app:srcCompat="@drawable/ic_close_24"
                app:tint="@color/red" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save"
                app:srcCompat="@drawable/ic_ok_24_dp" />
        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
